fix: update eurovoc sparql query